--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.3.0",
+    "@expo-google-fonts/montserrat": "^0.3.0",
     "@expo-google-fonts/space-grotesk": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
