--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@tanstack/react-query": "^5.74.4",
-    "axios": "^1.8.4",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -35,6 +33,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "payload-rest-client": "^3.0.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
