--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo-google-fonts/montserrat": "^0.3.0",
     "@expo-google-fonts/space-grotesk": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.9.0",
@@ -34,6 +35,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "lodash": "^4.17.21",
     "payload-rest-client": "^3.0.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -49,6 +51,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.16",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
