--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "use-immer": "^0.11.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
