--- a/app.json
+++ b/app.json
@@ -68,6 +68,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "9c01ad34-ea4b-41ce-875b-32bc54b13bd7"
+      }
     }
   }
 }
