--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "axios": "^1.9.0",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-device": "~7.0.3",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-notifications": "~0.29.14",
-    "expo-permissions": "^14.4.0",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
@@ -52,12 +53,11 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "use-immer": "^0.11.0",
-    "zustand": "^5.0.3",
-    "expo-dev-client": "~5.0.20",
-    "expo-build-properties": "~0.13.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.16",
     "@types/react": "~18.3.12",
