--- a/app.json
+++ b/app.json
@@ -79,7 +79,8 @@
       },
       "eas": {
         "projectId": "9c01ad34-ea4b-41ce-875b-32bc54b13bd7"
-      }
+      },
+      "razorpayApiKey": "rzp_test_gHHvCEfpFf9412"
     },
     "owner": "jash176"
   }
