--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "use-immer": "^0.11.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
