--- a/package.json
+++ b/package.json
@@ -25,50 +25,49 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.9.0",
-    "expo": "~52.0.46",
-    "expo-blur": "~14.0.3",
-    "expo-build-properties": "~0.13.2",
-    "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.20",
-    "expo-device": "~7.0.3",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-notifications": "~0.29.14",
-    "expo-router": "~4.0.20",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^53.0.10",
+    "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.6",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.0",
+    "expo-device": "~7.1.4",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.31.3",
+    "expo-router": "~5.0.7",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.8",
+    "expo-web-browser": "~14.1.6",
     "lodash": "^4.17.21",
     "payload-rest-client": "^3.0.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.3",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-razorpay": "^2.3.0",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "use-immer": "^0.11.0",
-    "zustand": "^5.0.3",
-    "react-native-svg": "15.8.0"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.16",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
+    "@types/react-dom": "^19.1.6",
     "@types/react-native-razorpay": "^2.2.6",
-    "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
-    "react-test-renderer": "18.3.1",
+    "jest-expo": "~53.0.6",
     "typescript": "^5.3.3"
   },
   "private": true
