--- a/eas.json
+++ b/eas.json
@@ -6,16 +6,24 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
-    },
-    "preview": {
       "distribution": "internal",
       "android": {
         "gradleCommand": ":app:assembleRelease",
         "buildType": "apk"
       }
     },
+    "preview": {
+      "distribution": "internal",
+      "developmentClient": false,
+      "android": {
+        "buildType": "aab"
+      }
+    },
     "production": {
+      "developmentClient": false,
+      "android": {
+        "buildType": "aab"
+      },
       "autoIncrement": true
     }
   },
