--- a/ios/compavaoappnetic/Info.plist
+++ b/ios/compavaoappnetic/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>com-pavao-appnetic</string>
+    <string>GRAPHEXCLUB</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -27,14 +27,14 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>myapp</string>
-          <string>com.pavao.appnetic</string>
+          <string>graphexclub</string>
+          <string>com.graphexclub.appnetic</string>
         </array>
       </dict>
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>exp+com-pavao-appnetic</string>
+          <string>exp+graphexclub</string>
         </array>
       </dict>
     </array>
