--- a/ios/compavaoappnetic/GoogleService-Info.plist
+++ b/ios/compavaoappnetic/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.pavao.appnetic</string>
+	<string>com.graphexclub.appnetic</string>
 	<key>PROJECT_ID</key>
 	<string>appnetic-3ec06</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:877700013698:ios:5bd6eb0cbbf75bb2711e9b</string>
+	<string>1:877700013698:ios:97e7fc28cea1f624711e9b</string>
 </dict>
 </plist>
