--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-EXPO_PUBLIC_STORE_ID=3
+EXPO_PUBLIC_STORE_ID=1
 EXPO_PUBLIC_STORE_NAME=GRAPHEXCLUB
-EXPO_PUBLIC_API_URL=https://better-sensibly-bullfrog.ngrok-free.app/api
+EXPO_PUBLIC_API_URL=https://appnetic-service-production.onrender.com/api
