razorpay key added

--- a/app.json
+++ b/app.json
@@ -80,7 +80,7 @@
       "eas": {
         "projectId": "99f84686-5172-4791-baf0-b79524c15de6"
       },
-      "razorpayApiKey": "rzp_test_hlKHh3CaHjv4jL"
+      "razorpayApiKey": "rzp_live_gHt7Nx1TjsGV1s"
     },
     "owner": "jash176"
   }
