fix: static images base url

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EXPO_PUBLIC_STORE_ID=3
 EXPO_PUBLIC_STORE_NAME=GRAPHEXCLUB
 EXPO_PUBLIC_API_URL=https://better-sensibly-bullfrog.ngrok-free.app/api
+EXPO_PUBLIC_STORAGE_URL=https://better-sensibly-bullfrog.ngrok-free.app
